--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,6 +1,6 @@
 suites:
     main:
-        namespace: LaraPackage\RandomId
-        psr4_prefix: LaraPackage\RandomId
+        namespace: PrometheusApi\Utilities
+        psr4_prefix: PrometheusApi\Utilities
         src_path: src
         spec_prefix: spec
